--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --bd:#e5e7eb; --info:#f8fafc; --info-bd:#cbd5e1;
-      --primary:#111827;              /* 主色：近黑 */
+      --primary:#111827;
       --primary-contrast:#fff;
       --ok-bg:#d1fae5; --ok-bd:#10b981; --ok-fg:#065f46;
     }
@@ -25,9 +25,7 @@
     .muted { color:#6b7280; font-size:13px; }
     .mt { margin-top:20px; }
     .notice { background:var(--info); border:1px solid var(--info-bd); color:#334155; padding:10px 14px; border-radius:12px; margin:0 0 16px; }
-
     .row { margin:8px 0; }
-
     .btn, input[type="submit"], input[type="reset"], button {
       color:#111827 !important; -webkit-text-fill-color:#111827 !important;
       background:#fff; border:1px solid var(--bd); font-size:16px; line-height:1.2; border-radius:10px; padding:10px 14px;
@@ -40,7 +38,6 @@
       border:1px solid var(--primary); box-shadow:0 6px 18px rgba(17,24,39,.15); font-weight:600;
     }
     .btn-primary:disabled { opacity:.6; cursor:not-allowed; box-shadow:none; }
-
     .seg { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .seg .opt {
       border:2px solid var(--bd); border-radius:12px; padding:10px 14px; cursor:pointer; user-select:none;
@@ -48,8 +45,6 @@
     }
     .seg .opt[aria-pressed="true"] { border-color:var(--primary); box-shadow:0 0 0 3px rgba(17,24,39,.12); font-weight:600; }
     .seg .opt[aria-disabled="true"] { opacity:.45; cursor:not-allowed; }
-
-    /* 成功提示 Toast */
     .toast {
       position:fixed; inset:auto 16px 16px 16px;
       background:var(--ok-bg); border:1px solid var(--ok-bd); color:var(--ok-fg);
@@ -99,8 +94,8 @@
         <div>
           <label>選擇配送時段</label>
           <div class="seg" role="group" aria-label="配送時段">
-            <div id="optAM"  class="opt" role="button" aria-pressed="false">上午（08:00–12:00）</div>
-            <div id="optPM"  class="opt" role="button" aria-pressed="false">下午（15:00–17:00）</div>
+            <div id="optAM" class="opt" role="button" aria-pressed="false">上午（08:00–12:00）</div>
+            <div id="optPM" class="opt" role="button" aria-pressed="false">下午（15:00–17:00）</div>
           </div>
           <div id="slotErr" class="error" style="display:none"></div>
         </div>
@@ -126,54 +121,173 @@
 
       <div class="row mt" style="display:flex; align-items:center; gap:10px;">
         <input id="submitBtn" type="submit" value="送出" class="btn btn-primary" style="min-width:140px">
-        <input id="resetBtn"  type="reset"  value="清空" class="btn">
+        <input id="resetBtn" type="reset" value="清空" class="btn">
         <span id="submitMsg" class="muted"></span>
       </div>
     </form>
   </div>
 
-  <!-- 成功提示 -->
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
   <script>
-    /* ====================  🔧 需替換為「正式值」  ==================== */
-    const LIFF_ID = "2008199393-NjOGJm4P";              // ← 改成正式 LIFF_ID
-    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // ← 改成正式 Apps Script /exec
-    /* =============================================================== */
+    const LIFF_ID = "2008199393-NjOGJm4P";   // ← 改成正式 LIFF_ID
+    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // ← 改成正式後端
 
-    // 時段定義
     const AM = { key:"AM", start:"08:00", end:"12:00" };
     const PM = { key:"PM", start:"15:00", end:"17:00" };
 
-    // 規則（依下單當下時間）：
-    // 07:00–12:59：今天僅可 PM；明天(含)以後 AM/PM 皆可
-    // 13:00–隔日 06:59：今天不可；明天(含)以後 AM/PM 皆可（自動把日期跳到明天）
-    const NOW = new Date();              // 以使用者本地時間為準（台灣）
-    const nowMin = NOW.getHours()*60 + NOW.getMinutes();
-    const MIN_07_00 = 7*60, MIN_12_59 = 12*60+59, MIN_13_00 = 13*60, MIN_06_59 = 6*60+59, MIN_23_59 = 23*60+59;
+    const $ = (s) => document.querySelector(s);
+    const byName = (n) => document.querySelector(`[name="${n}"]`);
 
-    const $ = (s)=>document.querySelector(s);
-    const byName = (n)=>document.querySelector(`[name="${n}"]`);
+    // 計算今日 / 明日字串
+    function toISODate(d) {
+      const y = d.getFullYear();
+      const m = String(d.getMonth()+1).padStart(2, "0");
+      const da = String(d.getDate()).padStart(2, "0");
+      return `${y}-${m}-${da}`;
+    }
 
-    // 日期工具
-    function toISODate(d){ const y=d.getFullYear(), m=String(d.getMonth()+1).padStart(2,"0"), da=String(d.getDate()).padStart(2,"0"); return `${y}-${m}-${da}`; }
-    function parseISODate(s){ const [y,m,d]=s.split("-").map(Number); return new Date(y,m-1,d); }
-    function addDays(d,n){ const x=new Date(d); x.setDate(x.getDate()+n); return x; }
-    const today = toISODate(NOW);
-    const tomorrow = toISODate(addDays(NOW,1));
+    function addDays(d, n) {
+      const x = new Date(d);
+      x.setDate(x.getDate() + n);
+      return x;
+    }
 
-    // 記住資料（含備註）
+    // 用於每次互動／初始化時刷新 min & slot 判斷
+    function refreshAll() {
+      enforceMinDate();
+      refreshSlotLimit();
+    }
+
+    async function initLiff(){
+      try {
+        await liff.init({ liffId: LIFF_ID });
+        if (!liff.isLoggedIn()) {
+          liff.login({ redirectUri: window.location.href });
+          return;
+        }
+        window.LIFF_READY = true;
+        try {
+          const p = await liff.getProfile();
+          window.__USER_ID__ = p.userId || "";
+          if (window.__USER_ID__) loadDefaults(window.__USER_ID__);
+        } catch {}
+      } catch(e) {
+        console.error("liff.init 失敗", e);
+      }
+    }
+
+    // 取得現在時間、轉成分鐘數
+    function getNowMin() {
+      const now = new Date();
+      return now.getHours()*60 + now.getMinutes();
+    }
+
+    const MIN_07_00 = 7*60;
+    const MIN_12_59 = 12*60 + 59;
+    const MIN_13_00 = 13*60;
+
+    function policyFor(dateStr) {
+      const nowMin = getNowMin();
+      const TODAY = toISODate(new Date());
+      const TOMORROW = toISODate(addDays(new Date(),1));
+      const d = dateStr ? new Date(dateStr + "T00:00:00") : null;
+      const isToday = d && toISODate(d) === TODAY;
+
+      // 若現在時間 13:00 以後 → 今天不能下單
+      if (nowMin >= MIN_13_00) {
+        if (isToday) return { allowAM:false, allowPM:false, allowToday:false, note:"現在時間超過 13:00，今天不可預約" };
+        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+      }
+      // 現在時間 07:00–12:59 → 今天僅可預約下午 (PM)
+      if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
+        if (isToday) return { allowAM:false, allowPM:true, allowToday:true, note:"今天僅可預約下午（15:00–17:00）" };
+        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+      }
+      // 現在時間 00:00–06:59 → 今天可預約 上午 / 下午
+      // 相當於 else
+      if (isToday) return { allowAM:true, allowPM:true, allowToday:true, note:"現在是凌晨／早上，今天可預約上午或下午" };
+      return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+    }
+
+    function enforceMinDate(){
+      const nowMin = getNowMin();
+      const today = toISODate(new Date());
+      const tomorrow = toISODate(addDays(new Date(),1));
+      const minDate = (nowMin >= MIN_13_00) ? tomorrow : today;
+      const orderDateEl = byName("orderDate");
+      orderDateEl.min = minDate;
+      if (!orderDateEl.value || orderDateEl.value < minDate) {
+        orderDateEl.value = minDate;
+      }
+    }
+
+    const optAM = $("#optAM"), optPM = $("#optPM");
+    function setDisabled(el, disabled) {
+      el.setAttribute("aria-disabled", disabled ? "true":"false");
+      el.style.opacity = disabled ? 0.45 : 1;
+      el.style.pointerEvents = disabled ? "none" : "";
+    }
+    function setSlot(slot){
+      const st = byName("startTime"), et = byName("endTime"), sl = byName("slot");
+      if (slot === AM.key) {
+        st.value = AM.start; et.value = AM.end; sl.value = AM.key;
+        optAM.setAttribute("aria-pressed","true"); optPM.setAttribute("aria-pressed","false");
+      } else if (slot === PM.key) {
+        st.value = PM.start; et.value = PM.end; sl.value = PM.key;
+        optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","true");
+      } else {
+        st.value = et.value = sl.value = "";
+        optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","false");
+      }
+    }
+
+    function refreshSlotLimit(){
+      const orderDateEl = byName("orderDate");
+      const dateHelp = $("#dateHelp");
+      const val = orderDateEl.value;
+      const pol = policyFor(val);
+      dateHelp.textContent = pol.note;
+
+      setDisabled(optAM, !pol.allowAM);
+      setDisabled(optPM, !pol.allowPM);
+      setSlot(null);
+
+      if (pol.allowAM) setSlot(AM.key);
+      else if (pol.allowPM) setSlot(PM.key);
+
+      const today = toISODate(new Date());
+      if (!pol.allowToday && val === today) {
+        orderDateEl.value = toISODate(addDays(new Date(),1));
+        // 再次刷新
+        refreshSlotLimit();
+      }
+    }
+
+    // 點 slot 按鈕
+    optAM.addEventListener("click", ()=>{
+      if (optAM.getAttribute("aria-disabled")==="true") return;
+      setSlot(AM.key);
+      $("#slotErr").style.display = "none";
+    });
+    optPM.addEventListener("click", ()=>{
+      if (optPM.getAttribute("aria-disabled")==="true") return;
+      setSlot(PM.key);
+      $("#slotErr").style.display = "none";
+    });
+
+    // 載入預設資料、送單流程等 (保持原樣) …
     const STORE_VER = "v2";
     function keyFor(uid){ return `liff:defaults:${STORE_VER}:${uid}`; }
     function loadDefaults(uid){
       try{
-        const raw = localStorage.getItem(keyFor(uid)); if(!raw) return;
+        const raw = localStorage.getItem(keyFor(uid)); if (!raw) return;
         const d = JSON.parse(raw);
         if (d.customerName && !byName("customerName").value) byName("customerName").value = d.customerName;
         if (d.address && !byName("address").value) byName("address").value = d.address;
         if (d.phone && !byName("phone").value) byName("phone").value = d.phone;
         if (d.note && !byName("note").value) byName("note").value = d.note;
-      }catch{}
+      } catch {}
     }
     function saveDefaults(uid){
       try{
@@ -184,151 +298,95 @@
           note: byName("note").value.trim(),
         };
         localStorage.setItem(keyFor(uid), JSON.stringify(data));
-      }catch{}
+      } catch {}
     }
-    $("#resetBtn").addEventListener("click",(ev)=>{
+
+    $("#resetBtn").addEventListener("click", (ev)=>{
       if (ev.shiftKey && window.__USER_ID__) {
         localStorage.removeItem(keyFor(window.__USER_ID__));
         alert("已清除記住的資料（含備註）");
       }
     });
 
-    // LIFF 初始化（先就緒，再抓 profile）
-    let LIFF_READY = false;
-    async function initLiff(){
-      try{
-        await liff.init({ liffId: LIFF_ID });
-        if (!liff.isLoggedIn()) { liff.login({ redirectUri: window.location.href }); return; }
-        LIFF_READY = true;
-        try{
-          const p = await liff.getProfile();
-          window.__USER_ID__ = p.userId || "";
-          if (window.__USER_ID__) loadDefaults(window.__USER_ID__);
-        }catch(e){ /* profile 非必需 */ }
-      }catch(e){ console.error("liff.init 失敗", e); }
-    }
-
-    // AM/PM 控制
-    const optAM = $("#optAM"), optPM = $("#optPM");
-    function setSlot(slot){
-      const st=byName("startTime"), et=byName("endTime"), sl=byName("slot");
-      if (slot===AM.key){ st.value=AM.start; et.value=AM.end; sl.value=AM.key; optAM.setAttribute("aria-pressed","true"); optPM.setAttribute("aria-pressed","false"); }
-      else if (slot===PM.key){ st.value=PM.start; et.value=PM.end; sl.value=PM.key; optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","true"); }
-      else { st.value=et.value=sl.value=""; optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","false"); }
-    }
-    function setDisabled(el, disabled){
-      el.setAttribute("aria-disabled", disabled? "true":"false");
-      el.style.opacity = disabled? .45 : 1;
-      el.style.pointerEvents = disabled? "none" : "auto";
-    }
-    optAM.addEventListener("click", ()=>{ if(optAM.getAttribute("aria-disabled")==="true") return; setSlot(AM.key); $("#slotErr").style.display="none"; });
-    optPM.addEventListener("click", ()=>{ if(optPM.getAttribute("aria-disabled")==="true") return; setSlot(PM.key); $("#slotErr").style.display="none"; });
-
-    // 規則計算
-    function policyFor(dateStr){
-      const d = parseISODate(dateStr);
-      const isToday = toISODate(d) === today;
-      const isTomorrow = toISODate(d) === tomorrow;
-
-       // 13:00–23:59 → 今天不可，切到明天起
-      if (nowMin >= MIN_13_00) {
-        if (isToday) return { allowAM:false, allowPM:false, redirect: true, note:"現在時間超過 13:00，今天不可預約" };
-        return { allowAM:true, allowPM:true, note:"明天(含)以後皆可預約上午/下午" };
-      }
-     // 當前時間 00:00–06:59 → 今天允許 AM & PM
-      if (nowMin < MIN_07_00) {
-        if (isToday) return { allowAM:true, allowPM:true, note:"現在是凌晨，今天可預約上午/下午" };
-        return { allowAM:true, allowPM:true, note:"明天(含)以後皆可預約上午/下午" };
-      }
-      // 07:00–12:59：今天僅可 PM；明天(含)以後 AM/PM 皆可
-      if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
-        if (isToday) return { allowToday:true, allowAM:false, allowPM:true, note:"今天僅可預約下午（15:00–17:00）" };
-        return { allowToday:true, allowAM:true, allowPM:true, note:"明天(含)以後皆可預約上午/下午" };
-      }
-      // 其他（保險）
-      if (isToday) return { allowToday:false, allowAM:false, allowPM:false, note:"目前不可預約今天" };
-      return { allowToday:true, allowAM:true, allowPM:true, note:"" };
-    }
-
-    // 日期限制
-    const orderDateEl = byName("orderDate");
-    const dateHelp = $("#dateHelp");
-    function enforceMinDate(){
-      const minDate = (nowMin >= MIN_13_00) ? tomorrow : today;
-      orderDateEl.min = minDate;
-      if (!orderDateEl.value || orderDateEl.value < minDate) orderDateEl.value = minDate;
-    }
-    function refreshSlotLimit(){
-      const pol = policyFor(orderDateEl.value);
-      dateHelp.textContent = pol.note;
-
-      setDisabled(optAM, !pol.allowAM);
-      setDisabled(optPM, !pol.allowPM);
-      setSlot(null);
-
-      // 預設勾選「上午」，若上午不可才選下午
-      if (pol.allowAM) setSlot(AM.key); else if (pol.allowPM) setSlot(PM.key);
-
-      if (!pol.allowToday && orderDateEl.value === today) {
-        orderDateEl.value = tomorrow;
-        refreshSlotLimit();
-      }
-    }
-    orderDateEl.addEventListener("change", refreshSlotLimit);
-
-    // 成功提示
-    function showToast(msg){ const t=$("#toast"); t.textContent=msg; t.classList.add("show"); setTimeout(()=>t.classList.remove("show"), 3200); }
-
-    // 送單
     $("#orderForm").addEventListener("submit", async (e)=>{
       e.preventDefault();
-      const btn=$("#submitBtn"), msg=$("#submitMsg");
-      msg.className="muted"; msg.textContent="送出中…"; btn.disabled=true;
+      const btn = $("#submitBtn"), msg = $("#submitMsg");
+      msg.className = "muted"; msg.textContent = "送出中…"; btn.disabled = true;
 
-      enforceMinDate(); refreshSlotLimit();
+      refreshAll();
 
       if (!byName("slot").value) {
-        $("#slotErr").style.display="block"; $("#slotErr").textContent="請選擇可預約的時段（上午或下午）";
-        btn.disabled=false; return;
+        $("#slotErr").style.display = "block";
+        $("#slotErr").textContent = "請選擇可預約的時段（上午或下午）";
+        btn.disabled = false;
+        return;
       }
       const qtyVal = parseInt(byName("qty").value, 10);
-      if (isNaN(qtyVal) || qtyVal<1 || qtyVal>10) { msg.className="error"; msg.textContent="❌ 數量必須是 1～10 之間的整數"; btn.disabled=false; return; }
-
-      if (!LIFF_READY || !liff.isLoggedIn()) { msg.className="error"; msg.textContent="❌ LIFF 尚未就緒或未登入"; btn.disabled=false; return; }
+      if (isNaN(qtyVal) || qtyVal < 1 || qtyVal > 10) {
+        msg.className = "error";
+        msg.textContent = "❌ 數量必須是 1～10 之間的整數";
+        btn.disabled = false;
+        return;
+      }
+      if (!window.LIFF_READY || !liff.isLoggedIn()) {
+        msg.className = "error";
+        msg.textContent = "❌ LIFF 尚未就緒或未登入";
+        btn.disabled = false;
+        return;
+      }
       const idToken = liff.getIDToken();
-      if (!idToken) { msg.className="error"; msg.textContent="❌ 取不到 ID Token"; btn.disabled=false; return; }
+      if (!idToken) {
+        msg.className = "error";
+        msg.textContent = "❌ 取不到 ID Token";
+        btn.disabled = false;
+        return;
+      }
 
-      try{
-        const fd=new FormData(e.target);
-        const p=new URLSearchParams();
+      try {
+        const fd = new FormData(e.target);
+        const p = new URLSearchParams();
         p.set("id_token", idToken);
         ["customerName","address","phone","orderDate","startTime","endTime","qty","note","slot"]
-          .forEach(k=>p.set(k,(fd.get(k)||"").toString().trim()));
+          .forEach(k => p.set(k, (fd.get(k)||"").toString().trim()));
 
-        const controller=new AbortController(); const timer=setTimeout(()=>controller.abort(),15000);
-        const res=await fetch(GAS_ENDPOINT,{ method:"POST", headers:{ "Content-Type":"application/x-www-form-urlencoded;charset=UTF-8" }, body:p.toString(), signal:controller.signal })
-          .catch(err=>{ throw new Error(err.name==="AbortError"?"連線逾時，請稍後再試":err.message); });
+        const controller = new AbortController();
+        const timer = setTimeout(()=>controller.abort(), 15000);
+        const res = await fetch(GAS_ENDPOINT, {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8" },
+          body: p.toString(),
+          signal: controller.signal
+        });
         clearTimeout(timer);
 
-        let json={}; try{ json=await res.json(); }catch{}
-        if(!res.ok || !json.ok) throw new Error(json.message||`HTTP ${res.status}`);
+        let json = {};
+        try { json = await res.json(); } catch {}
+        if (!res.ok || !json.ok) throw new Error(json.message || `HTTP ${res.status}`);
 
         if (window.__USER_ID__) saveDefaults(window.__USER_ID__);
 
-        msg.className="muted"; msg.textContent="";
-        showToast(`已送出 ✅ 訂單編號：${json.orderId}`);
-        e.target.reset(); enforceMinDate(); refreshSlotLimit();
-      }catch(err){
-        console.error(err); msg.className="error"; msg.textContent="❌ "+(err?.message||err);
-      }finally{ btn.disabled=false; }
+        msg.className = "muted"; msg.textContent = "";
+        const toast = $("#toast");
+        toast.textContent = `已送出 ✅ 訂單編號：${json.orderId}`;
+        toast.classList.add("show");
+        setTimeout(()=>toast.classList.remove("show"), 3200);
+
+        e.target.reset();
+        refreshAll();
+      } catch (err) {
+        console.error(err);
+        msg.className = "error";
+        msg.textContent = "❌ " + (err?.message || err);
+      } finally {
+        btn.disabled = false;
+      }
     });
 
-    // 啟動
-    (async function(){
-      enforceMinDate();
+    // 啟動 (load 時會 run)
+    window.addEventListener("load", async () => {
       await initLiff();
-      refreshSlotLimit();
-    })();
+      refreshAll();
+    });
   </script>
 </body>
 </html>
