--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
   <script>
-    const LIFF_ID = "2008199393-NjOGJm4P";   // ← 改成正式 LIFF_ID
+    const LIFF_ID = "2008199393-AMqeEVBY";   // ← 改成正式 LIFF_ID
     const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // ← 改成正式後端
 
     const AM = { key:"AM", start:"08:00", end:"12:00" };
