Refactor HTML and JavaScript for improved readability

--- a/index.html
+++ b/index.html
@@ -15,29 +15,43 @@
     .wrap { max-width:960px; margin:0 auto; padding:24px; }
     h1 { font-size:28px; margin:0 0 16px; }
     h2 { font-size:20px; margin:0 0 12px; }
+
     .card { border:1px solid var(--bd); border-radius:14px; padding:16px; background:#fff; }
     .grid { display:grid; grid-template-columns:1fr 1fr; gap:14px; }
     label { display:block; font-size:14px; color:#111827; }
-    input, textarea { width:100%; box-sizing:border-box; padding:10px 12px; border:1px solid var(--bd); border-radius:10px; background:#fff; }
+    input, textarea {
+      width:100%; box-sizing:border-box; padding:10px 12px;
+      border:1px solid var(--bd); border-radius:10px; background:#fff;
+    }
     textarea { resize:vertical; }
+
     .help { color:#6b7280; font-size:12px; display:block; margin-top:4px; }
     .error { color:#b42318; font-size:13px; margin-top:8px; }
     .muted { color:#6b7280; font-size:13px; }
     .mt { margin-top:20px; }
-    .notice { background:var(--info); border:1px solid var(--info-bd); color:#334155; padding:10px 14px; border-radius:12px; margin:0 0 16px; }
+
+    .notice {
+      background:var(--info); border:1px solid var(--info-bd); color:#334155;
+      padding:10px 14px; border-radius:12px; margin:0 0 16px;
+    }
+
     .row { margin:8px 0; }
+
     .btn, input[type="submit"], input[type="reset"], button {
-      color:#111827 !important; -webkit-text-fill-color:#111827 !important;
+      color:#111827 !重要; -webkit-text-fill-color:#111827 !重要;
       background:#fff; border:1px solid var(--bd); font-size:16px; line-height:1.2; border-radius:10px; padding:10px 14px;
       -webkit-appearance:none; appearance:none; cursor:pointer;
       transition: transform .02s ease, box-shadow .2s ease;
     }
     .btn:active { transform: translateY(1px); }
     .btn-primary {
-      background: var(--primary); color: var(--primary-contrast) !important; -webkit-text-fill-color: var(--primary-contrast) !important;
+      background: var(--primary);
+      color: var(--primary-contrast) !重要;
+      -webkit-text-fill-color: var(--primary-contrast) !重要;
       border:1px solid var(--primary); box-shadow:0 6px 18px rgba(17,24,39,.15); font-weight:600;
     }
     .btn-primary:disabled { opacity:.6; cursor:not-allowed; box-shadow:none; }
+
     .seg { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .seg .opt {
       border:2px solid var(--bd); border-radius:12px; padding:10px 14px; cursor:pointer; user-select:none;
@@ -45,6 +59,7 @@
     }
     .seg .opt[aria-pressed="true"] { border-color:var(--primary); box-shadow:0 0 0 3px rgba(17,24,39,.12); font-weight:600; }
     .seg .opt[aria-disabled="true"] { opacity:.45; cursor:not-allowed; }
+
     .toast {
       position:fixed; inset:auto 16px 16px 16px;
       background:var(--ok-bg); border:1px solid var(--ok-bd); color:var(--ok-fg);
@@ -52,8 +67,10 @@
       box-shadow:0 8px 24px rgba(0,0,0,.08);
     }
     .toast.show { display:block; animation:fadein .18s ease; }
+
     @keyframes fadein { from{opacity:0; transform:translateY(8px);} to{opacity:1; transform:translateY(0);} }
   </style>
+
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
@@ -130,8 +147,8 @@
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
   <script>
-    const LIFF_ID = "2008199393-AMqeEVBY";   // ← 改成正式 LIFF_ID
-    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz81CJcKY9WsjzTBJBw1v_tVpjiiCc_EfNZr_QUaPsQ7DfTqlG8llSVC08o8mu8kvpM/exec"; // ← 改成正式後端
+    const LIFF_ID = "2008199393-AMqeEVBY";   // 正式 LIFF_ID
+    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz81CJcKY9WsjzTBJBw1v_tVpjiiCc_EfNZr_QUaPsQ7DfTqlG8llSVC08o8mu8kvpM/exec"; // 正式後端
 
     const AM = { key:"AM", start:"08:00", end:"12:00" };
     const PM = { key:"PM", start:"15:00", end:"17:00" };
@@ -139,7 +156,7 @@
     const $ = (s) => document.querySelector(s);
     const byName = (n) => document.querySelector(`[name="${n}"]`);
 
-    // 計算今日 / 明日字串
+    // ===== 共用日期 / 時間工具 =====
     function toISODate(d) {
       const y = d.getFullYear();
       const m = String(d.getMonth()+1).padStart(2, "0");
@@ -153,12 +170,130 @@
       return x;
     }
 
-    // 用於每次互動／初始化時刷新 min & slot 判斷
-    function refreshAll() {
-      enforceMinDate();
-      refreshSlotLimit();
+    function getNowMin() {
+      const now = new Date();
+      return now.getHours()*60 + now.getMinutes();
     }
 
+    const MIN_07_00 = 7*60;
+    const MIN_12_59 = 12*60 + 59;
+    const MIN_13_00 = 13*60;
+
+    // 依目前時間 + 選擇的日期，回傳允許的時段
+    function policyFor(dateStr) {
+      const nowMin = getNowMin();
+      const TODAY = toISODate(new Date());
+      const d = dateStr ? new Date(dateStr + "T00:00:00") : null;
+      const isToday = d && toISODate(d) === TODAY;
+
+      // 13:00 之後，今天不能下單
+      if (nowMin >= MIN_13_00) {
+        if (isToday) return { allowAM:false, allowPM:false, allowToday:false, note:"現在時間超過 13:00，今天不可預約" };
+        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+      }
+
+      // 07:00–12:59 → 今天只能預約下午
+      if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
+        if (isToday) return { allowAM:false, allowPM:true, allowToday:true, note:"今天僅可預約下午（15:00–17:00）" };
+        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+      }
+
+      // 凌晨～早上 → 今天上午/下午都可以
+      if (isToday) return { allowAM:true, allowPM:true, allowToday:true, note:"現在是凌晨／早上，今天可預約上午或下午" };
+      return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
+    }
+
+    // 設定日期可選最小值（今天 or 明天）
+    function enforceMinDate(){
+      const nowMin = getNowMin();
+      const today = toISODate(new Date());
+      const tomorrow = toISODate(addDays(new Date(),1));
+      const minDate = (nowMin >= MIN_13_00) ? tomorrow : today;
+      const orderDateEl = byName("orderDate");
+      orderDateEl.min = minDate;
+      if (!orderDateEl.value || orderDateEl.value < minDate) {
+        orderDateEl.value = minDate;
+      }
+    }
+
+    // ===== 時段按鈕處理 =====
+    const optAM = $("#optAM"), optPM = $("#optPM");
+
+    function setDisabled(el, disabled) {
+      el.setAttribute("aria-disabled", disabled ? "true":"false");
+      el.style.opacity = disabled ? 0.45 : 1;
+      el.style.pointerEvents = disabled ? "none" : "";
+    }
+
+    function setSlot(slot){
+      const st = byName("startTime"), et = byName("endTime"), sl = byName("slot");
+      if (slot === AM.key) {
+        st.value = AM.start; et.value = AM.end; sl.value = AM.key;
+        optAM.setAttribute("aria-pressed","true");
+        optPM.setAttribute("aria-pressed","false");
+      } else if (slot === PM.key) {
+        st.value = PM.start; et.value = PM.end; sl.value = PM.key;
+        optAM.setAttribute("aria-pressed","false");
+        optPM.setAttribute("aria-pressed","true");
+      } else {
+        st.value = et.value = sl.value = "";
+        optAM.setAttribute("aria-pressed","false");
+        optPM.setAttribute("aria-pressed","false");
+      }
+    }
+
+    // ⭐ 修正版：只在「沒選」或「原本選擇已無效」時才自動幫選時段
+    function refreshSlotLimit(){
+      const orderDateEl = byName("orderDate");
+      const dateHelp = $("#dateHelp");
+      const val = orderDateEl.value;
+      const pol = policyFor(val);
+      dateHelp.textContent = pol.note;
+
+      // 使用者目前選的 slot 值
+      const currentSlot = byName("slot").value;
+
+      // 先依 policy 禁用 / 啟用按鈕
+      setDisabled(optAM, !pol.allowAM);
+      setDisabled(optPM, !pol.allowPM);
+
+      // 如果原本選擇還合法，就保留原本的；不去動它
+      if (currentSlot === AM.key && pol.allowAM) {
+        setSlot(AM.key);
+      } else if (currentSlot === PM.key && pol.allowPM) {
+        setSlot(PM.key);
+      } else {
+        // 原本選項已經不合法（或還沒選）才幫忙選預設
+        if (pol.allowAM) {
+          setSlot(AM.key);
+        } else if (pol.allowPM) {
+          setSlot(PM.key);
+        } else {
+          setSlot(null);
+        }
+      }
+
+      const today = toISODate(new Date());
+      if (!pol.allowToday && val === today) {
+        orderDateEl.value = toISODate(addDays(new Date(),1));
+        // 再刷新一次，套用新的日期規則
+        refreshSlotLimit();
+      }
+    }
+
+    // 點 AM/PM 按鈕
+    optAM.addEventListener("click", ()=>{
+      if (optAM.getAttribute("aria-disabled")==="true") return;
+      setSlot(AM.key);
+      $("#slotErr").style.display = "none";
+    });
+    optPM.addEventListener("click", ()=>{
+      if (optPM.getAttribute("aria-disabled")==="true") return;
+      setSlot(PM.key);
+      $("#slotErr").style.display = "none";
+    });
+
+    // ===== LIFF & 預設資料 =====
     async function initLiff(){
       try {
         await liff.init({ liffId: LIFF_ID });
@@ -177,108 +312,9 @@
       }
     }
 
-    // 取得現在時間、轉成分鐘數
-    function getNowMin() {
-      const now = new Date();
-      return now.getHours()*60 + now.getMinutes();
-    }
-
-    const MIN_07_00 = 7*60;
-    const MIN_12_59 = 12*60 + 59;
-    const MIN_13_00 = 13*60;
-
-    function policyFor(dateStr) {
-      const nowMin = getNowMin();
-      const TODAY = toISODate(new Date());
-      const TOMORROW = toISODate(addDays(new Date(),1));
-      const d = dateStr ? new Date(dateStr + "T00:00:00") : null;
-      const isToday = d && toISODate(d) === TODAY;
-
-      // 若現在時間 13:00 以後 → 今天不能下單
-      if (nowMin >= MIN_13_00) {
-        if (isToday) return { allowAM:false, allowPM:false, allowToday:false, note:"現在時間超過 13:00，今天不可預約" };
-        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
-      }
-      // 現在時間 07:00–12:59 → 今天僅可預約下午 (PM)
-      if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
-        if (isToday) return { allowAM:false, allowPM:true, allowToday:true, note:"今天僅可預約下午（15:00–17:00）" };
-        return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
-      }
-      // 現在時間 00:00–06:59 → 今天可預約 上午 / 下午
-      // 相當於 else
-      if (isToday) return { allowAM:true, allowPM:true, allowToday:true, note:"現在是凌晨／早上，今天可預約上午或下午" };
-      return { allowAM:true, allowPM:true, allowToday:true, note:"明天起皆可預約" };
-    }
-
-    function enforceMinDate(){
-      const nowMin = getNowMin();
-      const today = toISODate(new Date());
-      const tomorrow = toISODate(addDays(new Date(),1));
-      const minDate = (nowMin >= MIN_13_00) ? tomorrow : today;
-      const orderDateEl = byName("orderDate");
-      orderDateEl.min = minDate;
-      if (!orderDateEl.value || orderDateEl.value < minDate) {
-        orderDateEl.value = minDate;
-      }
-    }
-
-    const optAM = $("#optAM"), optPM = $("#optPM");
-    function setDisabled(el, disabled) {
-      el.setAttribute("aria-disabled", disabled ? "true":"false");
-      el.style.opacity = disabled ? 0.45 : 1;
-      el.style.pointerEvents = disabled ? "none" : "";
-    }
-    function setSlot(slot){
-      const st = byName("startTime"), et = byName("endTime"), sl = byName("slot");
-      if (slot === AM.key) {
-        st.value = AM.start; et.value = AM.end; sl.value = AM.key;
-        optAM.setAttribute("aria-pressed","true"); optPM.setAttribute("aria-pressed","false");
-      } else if (slot === PM.key) {
-        st.value = PM.start; et.value = PM.end; sl.value = PM.key;
-        optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","true");
-      } else {
-        st.value = et.value = sl.value = "";
-        optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","false");
-      }
-    }
-
-    function refreshSlotLimit(){
-      const orderDateEl = byName("orderDate");
-      const dateHelp = $("#dateHelp");
-      const val = orderDateEl.value;
-      const pol = policyFor(val);
-      dateHelp.textContent = pol.note;
-
-      setDisabled(optAM, !pol.allowAM);
-      setDisabled(optPM, !pol.allowPM);
-      setSlot(null);
-
-      if (pol.allowAM) setSlot(AM.key);
-      else if (pol.allowPM) setSlot(PM.key);
-
-      const today = toISODate(new Date());
-      if (!pol.allowToday && val === today) {
-        orderDateEl.value = toISODate(addDays(new Date(),1));
-        // 再次刷新
-        refreshSlotLimit();
-      }
-    }
-
-    // 點 slot 按鈕
-    optAM.addEventListener("click", ()=>{
-      if (optAM.getAttribute("aria-disabled")==="true") return;
-      setSlot(AM.key);
-      $("#slotErr").style.display = "none";
-    });
-    optPM.addEventListener("click", ()=>{
-      if (optPM.getAttribute("aria-disabled")==="true") return;
-      setSlot(PM.key);
-      $("#slotErr").style.display = "none";
-    });
-
-    // 載入預設資料、送單流程等 (保持原樣) …
     const STORE_VER = "v2";
     function keyFor(uid){ return `liff:defaults:${STORE_VER}:${uid}`; }
+
     function loadDefaults(uid){
       try{
         const raw = localStorage.getItem(keyFor(uid)); if (!raw) return;
@@ -289,6 +325,7 @@
         if (d.note && !byName("note").value) byName("note").value = d.note;
       } catch {}
     }
+
     function saveDefaults(uid){
       try{
         const data = {
@@ -308,10 +345,19 @@
       }
     });
 
+    // ===== 一起刷新日期 + 時段 =====
+    function refreshAll() {
+      enforceMinDate();
+      refreshSlotLimit();
+    }
+
+    // ===== 送出表單 =====
     $("#orderForm").addEventListener("submit", async (e)=>{
       e.preventDefault();
       const btn = $("#submitBtn"), msg = $("#submitMsg");
-      msg.className = "muted"; msg.textContent = "送出中…"; btn.disabled = true;
+      msg.className = "muted";
+      msg.textContent = "送出中…";
+      btn.disabled = true;
 
       refreshAll();
 
@@ -321,6 +367,7 @@
         btn.disabled = false;
         return;
       }
+
       const qtyVal = parseInt(byName("qty").value, 10);
       if (isNaN(qtyVal) || qtyVal < 1 || qtyVal > 10) {
         msg.className = "error";
@@ -328,12 +375,14 @@
         btn.disabled = false;
         return;
       }
+
       if (!window.LIFF_READY || !liff.isLoggedIn()) {
         msg.className = "error";
         msg.textContent = "❌ LIFF 尚未就緒或未登入";
         btn.disabled = false;
         return;
       }
+
       const idToken = liff.getIDToken();
       if (!idToken) {
         msg.className = "error";
@@ -365,7 +414,8 @@
 
         if (window.__USER_ID__) saveDefaults(window.__USER_ID__);
 
-        msg.className = "muted"; msg.textContent = "";
+        msg.className = "muted";
+        msg.textContent = "";
         const toast = $("#toast");
         toast.textContent = `已送出 ✅ 訂單編號：${json.orderId}`;
         toast.classList.add("show");
@@ -382,10 +432,18 @@
       }
     });
 
-    // 啟動 (load 時會 run)
+    // 啟動（load 時執行一次）
     window.addEventListener("load", async () => {
       await initLiff();
       refreshAll();
+
+      // ⭐ 日期變更時，重新計算可選時段
+      const orderDateEl = byName("orderDate");
+      if (orderDateEl) {
+        orderDateEl.addEventListener("change", () => {
+          refreshSlotLimit();
+        });
+      }
     });
   </script>
 </body>
